  unnamed ones appear first
+ Syntax: Added {/} shortcut that closes the last opened block
* Optimized scope-handling functions, {loop} and {with} are now slightly faster
* Fixed a bug in {date_format} that prevented anything but unix timestamps to
  work
* {literal} and {strip} now follow the LooseOpeningsHandling setting
* Fixed complex variables (i.e. {$_root[$c[$x.0]].0}) parsing bugs

[2008-05-10] 0.9.0
! BC Break: changed all class names to be PEAR compliant (aka use underscores
  to separate words/paths), sorry about that but I better do it now than in
  six months
! BC Break: $dwoo->output() and get() have been swapped internally, but it
  doesn't change anything for you unless you called output(*, *, *, true)
  directly to emulate get(). This was done to reduce some overhead
! BC Break: $dwoo->getTemplate() changed to $dwoo->templateFactory() and
  $dwoo->getCurrentTemplate() changed to $dwoo->getTemplate() for consistency
  among all classes and factory functions
+ Added a compiled version of Dwoo that loads faster (especially with opcode
  caches such as APC), include Dwoo.compiled.php instead of Dwoo.php on
  production but if you want to file a bug use Dwoo.php please as it allows
  you to get the proper file/line number where an error occurs. Do not remove
  all other files however since they are not all included in the compiled
  package
+ Plugins: Added {extends} and {block} to handle template inheritance, read
  more about it at http://wiki.dwoo.org/index.php/TemplateInheritance
+ Plugins: Added {loop} that combines {foreach} and {with}, see
  http://wiki.dwoo.org/index.php/Block:loop for details
+ Plugins: Added {do} that executes whatever you feed it whitout echoing the
  result, used internally for extends but you can use it if required
+ Plugins: Added {eol} that prints an end of line character (OS-specific)
+ Syntax: Added shortcut for {$dwoo.const.*} using '%', for example you can use
  {%FOO} instead of {$dwoo.const.FOO}