@@ -7,6 +7,8 @@
   work
 * {literal} and {strip} now follow the LooseOpeningsHandling setting
 * Fixed complex variables (i.e. {$_root[$c[$x.0]].0}) parsing bugs
+* Fixed $dwoo->addResource() breaking if the resource class was not loaded yet,
+  autoload should now be called (thanks mike)
 
 [2008-05-10] 0.9.0
 ! BC Break: changed all class names to be PEAR compliant (aka use underscores
